syntax = "proto2";

package performance;

import "google/protobuf/duration.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/performance/config";

////////////////////////////////////////////////////////////////////////////////

message PerformanceConfig {
    optional uint64 CreateDiskFromImageBandwidthMiBs = 1 [default = 300];
    optional uint64 CreateDiskFromSnapshotBandwidthMiBs = 2 [default = 300];
    optional uint64 CreateImageFromDiskBandwidthMiBs = 3 [default = 200];
    optional uint64 CreateImageFromImageBandwidthMiBs = 4 [default = 3000];
    optional uint64 CreateImageFromSnapshotBandwidthMiBs = 5 [default = 3000];
    optional uint64 CreateSnapshotFromDiskBandwidthMiBs = 6 [default = 200];
}
